--- a/hw02/index.html
+++ b/hw02/index.html
@@ -12,6 +12,8 @@
 	<body>
 		<h1>Animate!</h1>
 		<canvas height="500" width="500" id="playground" style="border:1px solid #000000;"></canvas>
+		<button id="start" type="button">Start</button>
+		<button id="stop" type="button">Stop</button>
 		<script src="animate.js"></script>
 	</body>
 </html>
