--- a/hw02/index.html
+++ b/hw02/index.html
@@ -14,6 +14,7 @@
 		<canvas height="500" width="500" id="playground" style="border:1px solid #000000;"></canvas>
 		<button id="start" type="button">Start</button>
 		<button id="stop" type="button">Stop</button>
+		<button id="dvd" type="button">DVD</button>
 		<script src="animate.js"></script>
 	</body>
 </html>
