--- a/sandbox/svg 2/svg_demo2.html
+++ b/sandbox/svg 2/svg_demo2.html
@@ -11,6 +11,7 @@
 			<circle cx="250" cy="250" r="75" fill="yellow" stroke="black"/>
 			<rect x="100" y="100" width="300" height="75" fill="blue"/>
 		</svg>
+		<input type="button" id="change" value="change">
 	</body>
 
 	<script src="svg-interactive.js"></script>
