--- a/hw06/index.html
+++ b/hw06/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Republican Delegate Count </title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <button id="switch"> Change Parties </button>
-    <h1> Republican Delegate Count </h1>
-    <table align="center">
-    </table>
-    <div class="alloted"></div>
-    <div class="not_lot"></div>
+    <div class="title"></div>
+    <input type="button" id="transition" value="Transition">
+    <div class="chart"></div>
   </body>
-  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script src="index.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="index.js"> </script>
 </html>
+
